--- a/frontend/hackaton/src/pages/page.module.css
+++ b/frontend/hackaton/src/pages/page.module.css
@@ -3,8 +3,13 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  /* background: linear-gradient(
+    to bottom,
+    rgba(var(214, 219, 220), 1),
+    rgba(var(20, 20, 20), 0.5)
+  );
+  background-clip: padding-box;
+  backdrop-filter: blur(24px); */
 }
 
 .description {
@@ -97,7 +102,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
